Changes destination of responsive images. Imports webfonts inside stylesheet

--- a/_scss/_typography.scss
+++ b/_scss/_typography.scss
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700|Merriweather+Sans:400,700,400italic|Lusitana:400,700);
 $serif: 'Lusitana', serif;
 $serif-2: 'Merriweather', serif;
 $sans-serif: 'Merriweather Sans', sans-serif;
