--- a/_scss/_posts.scss
+++ b/_scss/_posts.scss
@@ -97,4 +97,22 @@
 	 width: calc(70%);
       }
    }
+
+   &__photo-set {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: center;
+      align-content: center;
+
+      img {
+	 &:first-of-type {
+	    flex-grow: 1;
+	 }
+	 &:last-of-type {
+	    flex-grow: 1;
+	 }
+	 align-self: stretch;
+      }
+   }
 }
