Finished hitch-hiking draft, photoset layout

--- a/_layouts/photo-set.html
+++ b/_layouts/photo-set.html
@@ -6,13 +6,13 @@ layout: default
 <article class="post">
     <h2 class="post__title">{{ page.title }}</h2>
     <h4 class="post__date">{{ page.date | date_to_string }}</h4>
-    <div class="post__photo-set">
-        <ul>
-            {% for i in (1..set_size) %}
-            <img src="{{site.baseurl}}/images/photo_sets/{{page.photos.set}}/{{i}}.jpg" alt="Photo from {{ page.photos.set | capitalize | gsub(' ', '-') }}">
-            {% endfor %}
-        </ul>
-    </div>
     <p class="post__content">{{ content }}</p>
+    <div class="post__photo-set">
+        {% for i in (1..set_size) %}
+        <div class="post__photo-set__photo">
+            <a href="{{site.baseurl}}/images/photo_sets/{{page.photos.set}}/{{i}}.jpg" target="_blank"><img src="{{site.baseurl}}/images/photo_sets/{{page.photos.set}}/{{i}}.jpg" alt="Photo from {{ page.photos.set | capitalize }}"></a>
+        </div>
+        {% endfor %}
+    </div>
     <h3 class="post__category">{{ page.category }}</h3>
 </article>
