--- a/css/main.css
+++ b/css/main.css
@@ -128,8 +128,8 @@ h4, h5, h6 {
   .post__title {
     font-family: "Merriweather Sans", sans-serif;
     display: block;
-    font-size: 51px;
-    line-height: 52px;
+    font-size: 34px;
+    line-height: 41px;
     font-weight: 900; }
   .post__date {
     font-style: italic; }
@@ -157,6 +157,45 @@ h4, h5, h6 {
       width: -webkit-calc(70%);
       width: -moz-calc(70%);
       width: calc(70%); } }
+  .post__photo-set {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center; }
+    .post__photo-set__photo {
+      display: inline-block;
+      -webkit-box-flex: 1;
+      -webkit-flex-grow: 1;
+      -moz-box-flex: 1;
+      -ms-flex-positive: 1;
+      flex-grow: 1; }
+      .post__photo-set__photo:first-of-type {
+        -webkit-box-flex: 4;
+        -webkit-flex-grow: 4;
+        -moz-box-flex: 4;
+        -ms-flex-positive: 4;
+        flex-grow: 4; }
+      .post__photo-set__photo:last-of-type {
+        -webkit-box-flex: 2;
+        -webkit-flex-grow: 2;
+        -moz-box-flex: 2;
+        -ms-flex-positive: 2;
+        flex-grow: 2; }
 
 .about__photoHeader {
   max-width: 68em;
