--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,7 @@ html {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-*,
-*::after,
-*::before {
+*, *::after, *::before {
   -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
   box-sizing: inherit; }
@@ -59,7 +57,7 @@ h4, h5, h6 {
     .header__link:hover {
       color: #0059a6; }
     .header__link:active {
-      color: #004b8c; }
+      color: #004b8d; }
     .header__link--title {
       font-family: "Merriweather Sans", sans-serif;
       display: block;
@@ -114,11 +112,9 @@ h4, h5, h6 {
   .post img {
     max-width: 33%;
     height: auto;
-    float: left;
     margin-right: 1.5em; }
     @media screen and (min-width: 1224px) {
       .post img {
-        margin-bottom: 1.5em;
         max-width: 100%; } }
   .post .emoji {
     vertical-align: top;
@@ -158,44 +154,18 @@ h4, h5, h6 {
       width: -moz-calc(70%);
       width: calc(70%); } }
   .post__photo-set {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -moz-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-align-content: center;
-    -ms-flex-line-pack: center;
-    align-content: center; }
-    .post__photo-set__photo {
-      display: inline-block;
-      -webkit-box-flex: 1;
-      -webkit-flex-grow: 1;
-      -moz-box-flex: 1;
-      -ms-flex-positive: 1;
-      flex-grow: 1; }
-      .post__photo-set__photo:first-of-type {
-        -webkit-box-flex: 4;
-        -webkit-flex-grow: 4;
-        -moz-box-flex: 4;
-        -ms-flex-positive: 4;
-        flex-grow: 4; }
-      .post__photo-set__photo:last-of-type {
-        -webkit-box-flex: 2;
-        -webkit-flex-grow: 2;
-        -moz-box-flex: 2;
-        -ms-flex-positive: 2;
-        flex-grow: 2; }
+    display: inline-block;
+    line-height: 0; }
+    @media screen and (min-width: 1224px) {
+      .post__photo-set {
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
+        column-count: 3; } }
+    .post__photo-set img {
+      width: 100%;
+      max-width: 100%;
+      margin: 0.375em;
+      height: auto; }
 
 .about__photoHeader {
   max-width: 68em;
@@ -299,7 +269,7 @@ a {
   a:hover {
     color: #0059a6; }
   a:active {
-    color: #004b8c; }
+    color: #004b8d; }
 
 ul, ol {
   list-style-type: none;
