Moves hitchhiking to posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,6 @@ layout: default
 <article class="post">
     <h2 class="post__title">{{ page.title }}</h2>
     <h4 class="post__date">{{ page.date | date_to_string }}</h4>
-    <p class="post__content">{{ content }}</p>
+    <div class="post__content">{{ content }}</div>
     <h3 class="post__category">{{ page.category }}</h3>
 </article>
