--- a/_layouts/photo-set.html
+++ b/_layouts/photo-set.html
@@ -6,11 +6,10 @@ layout: default
 <article class="post">
     <h2 class="post__title">{{ page.title }}</h2>
     <h4 class="post__date">{{ page.date | date_to_string }}</h4>
-    <p class="post__content">{{ content }}</p>
+    <div class="post__content">{{ content }}</div>
     <div class="post__photo-set">
        {% for i in (1..set_size) %}
-       <a href="{{site.baseurl}}/images/photo_sets/{{page.photos.set}}/{{i}}.jpg" target="_blank"><img src="{{site.baseurl}}/images/photo_sets/{{page.photos.set}}/{{i}}.jpg" alt="Photo from {{ page.photos.set | capitalize"></a>
+       <a href="{{site.baseurl}}/images/photo_sets/{{page.photos.set}}/{{i}}.jpg" target="_blank"><img src="{{site.baseurl}}/images/photo_sets/{{page.photos.set}}/{{i}}.jpg" alt="Photo from {{ page.photos.set | capitalize }}"></a>
        {% endfor %}
     </div>
-    <h3 class="post__category">{{ page.category }}</h3>
 </article>
