--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,68 +1,82 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/lib/font-awesome.css">
-        <link rel="stylesheet" href="/css/main.css">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width">
 
-        <!-- Social Media -->
-        <meta name="description" content="Pamela Ocampo Likes Coffee" />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/lib/font-awesome.css">
+    <link rel="stylesheet" href="/css/main.css">
 
-        <!-- Twitter Card data -->
-        <meta name="twitter:card" content="summary">
-        <meta name="twitter:site" content="@pmocampo">
-        <meta name="twitter:title" content="{{ page.title }}">
-        <meta name="twitter:description" content="{{ page.excerpt | strip_html | truncate:150 }}">
-        <meta name="twitter:creator" content="@pmocampo">
-        {% if page.image %}
-            <meta name="twitter:image:src" content="{{ page.image | prepend: site.baseurl | prepend: site.url }}"> 
-        {% endif %} 
+    <!-- Social Media -->
+    <meta name="description" content="Pamela Ocampo Likes Coffee" />
 
-        <!-- Open Graph data -->
-        <meta property="og:title" content="{{ page.title }}" />
-        <meta property="og:type" content="article" />
-        <meta property="og:url" content="http://likescoffee.com/" />
-        {% if page.image %}
-            <meta name="og:image" content="{{ page.image | prepend: site.baseurl | prepend: site.url }}"> 
-        {% endif %}
-        <meta property="og:description" content="{{ page.excerpt | strip_html | strip_newlines | truncate:150 }}" /> 
-        <meta property="og:site_name" content="Pamela Ocampo Likes Coffee" />
-        <meta property="fb:admins" content="1397070010" />
-    </head>
-    <body>
-        <div class="site">
-            <div class="header">
-		<a href="/" class="header__link header__link--title">{{ site.name }}</a>
-		<a class="header__link  header__link--nav" href="/">home</a>
-		<a class="header__link header__link--nav" href="/about.html">about</a>
-            </div>
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@pmocampo">
+    <meta name="twitter:title" content="{{ page.title }}">
+    <meta name="twitter:description" content="{{ page.excerpt | strip_html | truncate:150 }}">
+    <meta name="twitter:creator" content="@pmocampo"> {% if page.image %}
+    <meta name="twitter:image:src" content="{{ page.image | prepend: site.baseurl | prepend: site.url }}"> {% endif %}
 
-            {{ content }}
+    <!-- Open Graph data -->
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://likescoffee.com/" /> {% if page.image %}
+    <meta name="og:image" content="{{ page.image | prepend: site.baseurl | prepend: site.url }}"> {% endif %}
+    <meta property="og:description" content="{{ page.excerpt | strip_html | strip_newlines | truncate:150 }}" />
+    <meta property="og:site_name" content="Pamela Ocampo Likes Coffee" />
+    <meta property="fb:admins" content="1397070010" />
+</head>
 
-            <div class="footer">
-                <ul class="footer__social">
-                    <li><a href="https://twitter.com/pmocampo" rel="me"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://github.com/pamo" rel="me"><i class="fa fa-github"></i></a></li>
-                    <li><a href="https://facebook.com/pamocampo/about" rel="me"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://foursquare.com/pmocampo"><i class="fa fa-foursquare"></i></a></li>
-                    <li><a href="https://instagram.com/pmocampo" rel="me"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://pamo.tumblr.com" rel="me"><i class="fa fa-tumblr"></i></a></li>
-                </ul>
-            </div>
-        </div>
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-            ga('require', 'displayfeatures');
-            ga('create', 'UA-47277958-1', 'auto');
-            ga('send', 'pageview');
-        </script>
-    </body>
+<body>
+    <div class="site">
+        <header class="header">
+            <a href="/" class="header__brand">{{ site.name }}</a>
+            <ul class="nav">
+                <li>
+                    <a class="nav__link" href="/">home</a>
+                </li>
+                <li>
+                    <a class="nav__link" href="/about.html">about</a>
+                </li>
+                <li>
+                    <a class="nav__link" href="#footer">social</a>
+                </li>        </ul>
+        </header>
+
+        {{ content }}
+
+        <footer class="footer" id="footer">
+            <ul class="footer__social">
+                <li><a href="https://twitter.com/pmocampo" rel="me"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://github.com/pamo" rel="me"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://facebook.com/pamocampo/about" rel="me"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://foursquare.com/pmocampo"><i class="fa fa-foursquare"></i></a></li>
+                <li><a href="https://instagram.com/pmocampo" rel="me"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://pamo.tumblr.com" rel="me"><i class="fa fa-tumblr"></i></a></li>
+            </ul>
+        </footer>
+    </div>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('require', 'displayfeatures');
+        ga('create', 'UA-47277958-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+</body>
+
 </html>
