--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -4,11 +4,13 @@
     margin: $base-spacing 0 $base-spacing 0;
     padding: $small-spacing 0 $base-spacing 0;
     &__social {
-	list-style: none;
-	li {
-	    float: left;
-	    padding: 0 $small-spacing 0 $small-spacing;
-	    font-size: 1.5em;
-	}
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+        justify-content: space-between;
+        li {
+            padding: 0 $small-spacing 0 $small-spacing;
+            font-size: 1.5em;
+        }
     }
 }
