--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -2,7 +2,6 @@
    sass dependencies defined in the bower.json */
 // bower:scss
 // endbower
-
 @import "grid-settings";
 @import "variables";
 @import "typography";
@@ -10,122 +9,108 @@
 @import "posts";
 @import "about";
 @import "footer";
-
 * {
     margin: 0;
     padding: 0;
     @include font-smoothing;
 }
-
-html, body { 
-  font-size: $base-font-size; 
-  height: 100%; 
+html,
+body {
+    font-size: $base-font-size;
+    height: 100%;
 }
-
 body {
     background: $white;
     color: $black;
     @include font_smoothing;
     @include base_typography;
-    padding: 0 $base-spacing $base-spacing $base-spacing;
+    padding: 0 $base-spacing $base-spacing;
     margin: 0;
     line-height: $base-line-height; // Set to $base-line-height to take on browser default of 150%
 }
-
-p, div { 
-  margin: $base-spacing 0 $base-spacing 0;
+p,
+div {
+    margin: $base-spacing 0;
 }
-
 h1 {
     @include h1_style;
 }
-
 h2 {
     @include h2_style;
 }
-
 h3 {
     @include h3_style;
 }
-
-h4, h5, h6 {
+h4,
+h5,
+h6 {
     @include heading;
 }
-
 a {
     @include anchor;
 }
-
-ul, ol {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-
-  &%default-ul {
-    list-style-type: disc;
-    margin-bottom: $small-spacing;
-    padding-left: $base-spacing;
-  }
-
-  &%default-ol {
-    list-style-type: decimal;
-    margin-bottom: $small-spacing;
-    padding-left: $base-spacing;
-  }
+ul,
+ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    &%default-ul {
+        list-style-type: disc;
+        margin-bottom: $small-spacing;
+        padding-left: $base-spacing;
+    }
+    &%default-ol {
+        list-style-type: decimal;
+        margin-bottom: $small-spacing;
+        padding-left: $base-spacing;
+    }
 }
-
 .site {
     text-align: justify;
     max-width: 700px;
-    margin: $base-spacing auto;
+    margin: 0 auto;
     &__cover {
-      width: 100%;
-      height: auto;
-  }
+        width: 100%;
+        height: auto;
+    }
 }
-
 .postDescription {
     &__title {
-	display: inline;
-	& + * {
-	    display: inline;
-	}
+        display: inline;
+        & + * {
+            display: inline;
+        }
     }
-
     &__link {
-	display: inline-block;
-	font-family: $sans-serif;
-	font-weight: 700;
-	font-size: .8em;
-	text-transform: uppercase;
-	margin-left: .2em;
-	position: relative;
-
-	span {
-	    font-family: $serif;
-	    font-style: normal;
-	    position: absolute;
-	    font-size: 1.5em;
-	    top: -1px;
-	    right: -$base-spacing;
-	}
+        display: inline-block;
+        font-family: $sans-serif;
+        font-weight: 700;
+        font-size: 0.8em;
+        text-transform: uppercase;
+        margin-left: 0.2em;
+        position: relative;
+        span {
+            font-family: $serif;
+            font-style: normal;
+            position: absolute;
+            font-size: 1.5em;
+            top: -1px;
+            right: -$base-spacing;
+        }
     }
-
     &__truncatedContent {
-      font-family: $serif-2;
-      font-size: .9em;
-      margin-bottom: $base-spacing;
-      word-wrap: break-word;
-   }
-
+        font-family: $serif-2;
+        font-size: 0.9em;
+        margin-bottom: $base-spacing;
+        word-wrap: break-word;
+    }
     &__date {
-	font-family: $serif-2;
-	font-style: italic;
-	font-size: .9em;
-	margin: $base-spacing 0 $small-spacing 0;
+        font-family: $serif-2;
+        font-style: italic;
+        font-size: 0.9em;
+        margin: $base-spacing 0 $small-spacing;
     }
 }
-
 hr {
     width: 1px;
 }
