Adds pruned body to page links on index

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -74,6 +74,11 @@ blockquote {
     list-style-type: circle;
   }
 }
+.page-link {
+  font-weight: 700;
+  font-size: 1.25em;
+  font-family: 'Montserrat'
+}
 
 .responsive-iframe {
   padding-bottom: 120%;
