--- a/css/styles.scss
+++ b/css/styles.scss
@@ -64,13 +64,22 @@ a {
 }
 
 .social-networks {
-  display: inline;
-  list-style-type: none;
-  margin: 0;
+  display: flex;
+  margin: 0 auto;
   padding: 0;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 
-  li {
-    display: inline-block;
+  &__icon {
+    transform: translateZ(1);
+    transition-property: transform;
+    transition-duration: 0.3s;
+    flex-basis: 20%;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 }
 
