Uses figcaption to style captions and use them from alt attributes

--- a/css/markdown.scss
+++ b/css/markdown.scss
@@ -9,7 +9,7 @@
     border-bottom: 2px solid $bondi-blue;
   }
 
-  img + em {
+  figcaption {
     color: $graphite;
     display: block;
     font-style: normal;
